--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="connect_as_anonymous">Anonymous</string>
     <string name="connect_as_registered">Registered user</string>
 
+    <string name="btn_connect">Connect</string>
+
+    <string name="fs_unit_bytes">%1$d bytes</string>
+
     <!-- Helper text-->
     <string name="helper_host">Enter server address</string>
     <string name="hint_host">Host</string>
