Prepare UI for File Operation Implementation #2
* Add info, rename, delete, download options for now
* Dialog shows above menu potions

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,11 @@
     <string name="file_cert">Certificate</string>
     <string name="file_json">JavaScript Object Notation</string>
 
+    <string name="dl_confirm">Download confirmation</string>
+
+    <string name="option_info">Info</string>
+    <string name="option_rename">Rename</string>
+    <string name="option_delete">Delete</string>
+    <string name="option_download">Download</string>
+
 </resources>
