--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
 
     <string name="channel_name">FTP File Manager Download</string>
     <string name="channel_description">Shows download notification</string>
+
+    <string name="alert_info_message">Permissions: %1$s\nOwner: %2$s\nGroup: %3$s\nSize: %4$d bytes\nDate: %5$s\nTime: %6$s\nPath: %7$s\nType: %8$s</string>
 </resources>
