--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,9 @@
     <string name="channel_description">Shows download notification</string>
 
     <string name="alert_info_message">Permissions: %1$s\nOwner: %2$s\nGroup: %3$s\nSize: %4$d bytes\nDate: %5$s\nTime: %6$s\nPath: %7$s\nType: %8$s</string>
+
+    <string name="permission_storage_rationale">Storage permissions are needed to download and save a file.</string>
+    <string name="permission_storage_button">Ok</string>
+    <string name="permission_storage_granted">Storage permissions granted</string>
+    <string name="permission_storage_denied">Can\'t download file: storage permission denied</string>
 </resources>
