Add File Deleting Functionality | v1.0.0-rc1 | Fixes #2
* Create separate function to get current directory of a item
* Add delete functionality

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,8 @@
     <string name="file_cert">Certificate</string>
     <string name="file_json">JavaScript Object Notation</string>
 
-    <string name="dl_confirm">Download confirmation</string>
+    <string name="confirm_dl">Download confirmation</string>
+    <string name="confirm_delete">Delete confirmation</string>
 
     <string name="option_rename">Rename</string>
     <string name="option_delete">Delete</string>
