Add File Deleting Functionality | v1.0.0-rc2 | Fixes #26
* Fix text and background colors, though force dark theme in device can mess up stuffs
* Update dependencies
* Add developer signature

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="toolbar_info">Info</string>
     <string name="toolbar_close">Close</string>
     <string name="toolbar_save">Save</string>
+
+    <string name="str_developer">Developed with ❤ by chankruze</string>
 </resources>
