Use ThreadPoolExecutor in Service to Download & Upload
* Upload & download are now callable
* Callable is passed to ThreadPoolExecutor queue
* Shows only transfer started & finished notification to reduce CPU usage
* Remove transfer sheet to show progress for now
* Remove Intent Services and Progress Receiver
* Update navbar color

Issues:
* When system uses light theme, text are invisible, edit text, actionbar, file action icons, in fact whole app ui color is fucked

To Do:
* Add support for material Day/Light theme

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,6 @@
     <string name="toolbar_save">Save</string>
 
     <string name="str_developer">Developed with ❤ by chankruze</string>
+
+    <string name="desc_notification_icon">Notification Icon</string>
 </resources>
